# auth0-streams-elasticsearch

./: Dockerfile  LICENSE  README.md  pyproject.toml
auth0_streams_elasticsearch/: __init__.py  batcher.py  client.py  log.py  log_types.py  logprop.py  receiver.py  sender.py  settings.py  types.py
auth0_streams_elasticsearch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ci/: pipeline.yml  settings.yml
